Fixed chosen multiselects taking too large widths (out of the page)

--- a/app/assets/stylesheets/js/chosen-custom.css
+++ b/app/assets/stylesheets/js/chosen-custom.css
@@ -1,5 +1,6 @@
 select.multiselect {
-  width:100%;
+  display:inline-block;
+  min-width:26em;
 }
 .chzn-container, .chzn-container-multi {
   font-size: 12px;
